[package]
name = "mining_rust"
version = "0.2.0"
authors = ["m4dz <m4dz@alwaysdata.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "^1.0.59"
serde_derive = "^1.0.59"
rust-crypto-wasm = "^0.3"

[dependencies.rand]
version = "^0.7"
features = ["wasm-bindgen"]

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "^0.3"
features = ['Window', 'Performance', 'PerformanceTiming']
