[package]
name = "mining_rust"
version = "0.1.0"
authors = ["m4dz <m4dz@alwaysdata.com>"]
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
console_error_panic_hook = "^0.1"
# rust-crypto-wasm = "^0.3"
sha2 = "^0.8"
# itertools = "^0.8"

[dependencies.rand]
version = "^0.6"
features = ["wasm-bindgen"]

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "^0.3"
features = ["console"]

[lib]
crate-type = ["cdylib"]
